--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,3 +7,61 @@ img {
     margin: 20px;
     padding: 10px;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #e6f2ff;
+    margin: 0;
+    padding: 0;
+}
+header {
+    background-color: #1c4f6e;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
+}
+h1 {
+    font-size: 3em;
+    margin: 0;
+}
+nav {
+    background-color: #337ab7;
+    color: #ffffff;
+    padding: 10px;
+}
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+nav li {
+    margin: 0 10px;
+}
+nav a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding: 10px;
+}
+nav a:hover {
+    background-color: #ffffff;
+    color: #337ab7;
+    border-radius: 5px;
+}
+main {
+    margin: 20px;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px #999999;
+}
+h2 {
+    font-size: 2em;
+    margin-top: 0;
+}
+p {
+    font-size: 1.2em;
+    line-height: 1.5;
+}
