--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,6 +3,11 @@ img {
     height: auto;
 }
 
+.container {
+    margin: 20px;
+    padding: 10px;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #e6f2ff;
