--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -65,3 +65,13 @@ p {
     font-size: 1.2em;
     line-height: 1.5;
 }
+
+button {
+    padding: 10px 20px;
+    background-color: #008CBA;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
